Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="content-wrapper text-center">
         <h2 class="handwritten reveal">You were just a face in a crowd…</h2>
         <div class="image-frame key-photo reveal delay-1">
-          <img src="/suchi1.png" alt="Suchi">
+          <img src="suchi1.png" alt="Suchi">
         </div>
         <p class="subtitle reveal delay-2">quiet, distant, unforgettable.</p>
         <div class="name-reveal reveal delay-3">
@@ -79,7 +79,7 @@
         <div class="content-wrapper text-center">
             <h2 class="handwritten reveal">Somewhere between your anger and my waiting…</h2>
             <div class="image-frame rotate-frame reveal delay-1">
-                <img src="/suchi2.jpg" alt="Us">
+                <img src="suchi2.jpg" alt="Us">
             </div>
             <p class="subtitle romantic-glow reveal delay-2">we found our forever.</p>
         </div>
@@ -89,7 +89,7 @@
       <div class="content-wrapper text-center">
         <h2 class="classic-text reveal">We are here.</h2>
         <div class="polaroid reveal delay-1">
-          <img src="images/suchi3.png" alt="Together">
+          <img src="suchi1.png" alt="Together">
         </div>
         <div class="future-glow reveal delay-2">
           <p>
@@ -132,4 +132,5 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
